--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,6 @@ venv.bak/
 .vscode/settings.json
 .DS_Store
 .DS_Store
+taurex_ggchem/glue/fort_ggchemmodule.c
+taurex_ggchem/glue/fort_ggchem-f2pywrappers2.f90
+taurex_ggchem/.vscode/settings.json
