--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  push:
+    # Sequence of patterns matched against refs/heads
+    branches:    
+      # Push events on main branch
+      - master
+    
 
 env:
 
@@ -14,7 +20,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-latest, macos-latest]
-        cibw_python: ["cp35-*","cp36-*", "cp37-*", "cp38-*", ]
+        cibw_python: ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "cp310-*"]
 
     steps:
       - uses: actions/checkout@v2
@@ -65,6 +71,7 @@ jobs:
           CIBW_BUILD: ${{ matrix.cibw_python }}
           FC: gfortran-10
           EXTRA_LINK_FLAGS: -static
+
       - uses: actions/upload-artifact@v2
         with:
           path: ./wheelhouse/*.whl
@@ -86,5 +93,4 @@ jobs:
       - uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
-          password: ${{ secrets.test_pypi_password }}
-          repository_url: https://test.pypi.org/legacy/
+          password: ${{ secrets.pypi_password }}
