--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,7 @@
 name: Build
 
 on:
-  push:
-    # Sequence of patterns matched against refs/heads
-    branches:    
-      # Push events on main branch
-      - master
+  workflow_dispatch:
     
 
 env:
@@ -20,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-18.04, windows-latest, macos-latest]
-        cibw_python: ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "cp310-*"]
+        cibw_python: ["cp38-*", "cp39-*", "cp310-*"]
 
     steps:
       - uses: actions/checkout@v2
@@ -28,10 +24,11 @@ jobs:
       - uses: actions/setup-python@v2
         name: Install Python
         with:
-          python-version: '3.7'
+          python-version: '3.9'
 
       - name: Install cibuildwheel
         run: |
+          python -m pip install numpy==1.21.2
           python -m pip install cibuildwheel==1.6.4
 
       - name: Build wheels (Linux)
