--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,11 @@ jobs:
         # [windows-2019, win*, "AMD64 x86"]. However, those two require a different compiler setup
         # so easier to separate out here.
         - [ubuntu-22.04, manylinux, x86_64,  ""]
-        - [ubuntu-22.04, musllinux, x86_64, ""]
         - [macos-12, macosx, x86_64, "10.9"]
         - [macos-14, macosx, arm64, "12.0"]
         - [windows-2019, win, AMD64, ""]
-
+        #- [ubuntu-22.04, musllinux, x86_64, ""]
+        
         python: [["cp39", "3.9"], ["cp310", "3.10"], ["cp311", "3.11"], ["cp312", "3.12"]]
         # python[0] is used to specify the python versions made by cibuildwheel
 
