--- a/meson.build
+++ b/meson.build
@@ -79,6 +79,9 @@ if ff.has_argument('-fdefault-double-8')
   add_project_arguments('-fdefault-double-8', language: 'fortran')
 endif
 
+if ff.has_argument('-r8'):
+  add_project_arguments('-r8', language: 'fortran')
+endif
 
 
 # Intel compilers default to fast-math, so disable it if we detect Intel
