--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,17 @@
 [build-system]
 build-backend = "mesonpy"
 requires = [
-    "meson-python>=0.12.1",
+    "meson-python>=0.17.1",
     "wheel",
     "oldest-supported-numpy",
-    "numpy>=1.25.0; python_version>='3.9'",
+    "numpy>=1.25.0,<2.0; python_version>='3.9'",
 ]
 
 [project]
 name = "taurex_ggchem"
 description = "Taurex Python wrapper for the FORTRAN GGChem code."
 dependencies = [
-    "numpy>=1.25.0",
+    "numpy>=1.25.0,<2.0",
     "taurex>=3.1.13",
 ]
 version="1.0.2"
