--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         # - [windows-2019, win, AMD64, ""]
         #- [ubuntu-22.04, musllinux, x86_64, ""]
 
-        python: [["cp39", "3.9"]] #, ["cp310", "3.10"], ["cp311", "3.11"], ["cp312", "3.12"]]
+        python: [["cp39", "3.9"]]#, ["cp310", "3.10"], ["cp311", "3.11"], ["cp312", "3.12"]]
         # python[0] is used to specify the python versions made by cibuildwheel
 
     env:
@@ -119,9 +119,9 @@ jobs:
           #  numpy2.0 wheels available on PyPI. Also remove/comment out the
           # PIP_NO_BUILD_ISOLATION and PIP_EXTRA_INDEX_URL from CIBW_ENVIRONMENT
           # (also for _MACOS and _WINDOWS below)
-          CIBW_BEFORE_BUILD_LINUX: "pip install setuptools  numpy<2.0.0 meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_linux.sh {project}"
-          CIBW_BEFORE_BUILD_WINDOWS: "pip install setuptools numpy<2.0.0 meson-python ninja delvewheel"
-          CIBW_BEFORE_BUILD_MACOS: "pip install setuptools numpy<2.0.0 meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_macos.sh {project}"
+          CIBW_BEFORE_BUILD_LINUX: "pip install setuptools  'numpy<2.0.0' meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_linux.sh {project}"
+          CIBW_BEFORE_BUILD_WINDOWS: "pip install setuptools 'numpy<2.0.0' meson-python ninja delvewheel"
+          CIBW_BEFORE_BUILD_MACOS: "pip install setuptools 'numpy<2.0.0' meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_macos.sh {project}"
           # Allow pip to find install nightly wheels if necessary
           # Setting PIP_NO_BUILD_ISOLATION=false makes pip use build-isolation.
           CIBW_ENVIRONMENT: "PIP_NO_BUILD_ISOLATION=false PIP_PRE=1 PIP_EXTRA_INDEX_URL=https://pypi.anaconda.org/scientific-python-nightly-wheels/simple"
