--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,6 @@ jobs:
         - [macos-12, macosx, x86_64, "10.9"]
         - [macos-14, macosx, arm64, "12.0"]
         - [windows-2019, win, AMD64, ""]
-        - [ubuntu-22.04, musllinux, x86_64, ""]
 
         python: [["cp39", "3.9"], ["cp310", "3.10"], ["cp311", "3.11"], ["cp312", "3.12"]]
         # python[0] is used to specify the python versions made by cibuildwheel
@@ -119,9 +118,9 @@ jobs:
           #  numpy2.0 wheels available on PyPI. Also remove/comment out the
           # PIP_NO_BUILD_ISOLATION and PIP_EXTRA_INDEX_URL from CIBW_ENVIRONMENT
           # (also for _MACOS and _WINDOWS below)
-          CIBW_BEFORE_BUILD_LINUX: "pip install setuptools  'numpy<2.0.0' meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_linux.sh {project}"
-          CIBW_BEFORE_BUILD_WINDOWS: "pip install setuptools 'numpy<2.0.0' meson-python ninja delvewheel"
-          CIBW_BEFORE_BUILD_MACOS: "pip install setuptools 'numpy<2.0.0' meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_macos.sh {project}"
+          CIBW_BEFORE_BUILD_LINUX: 'pip install setuptools  "numpy<2.0.0" meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_linux.sh {project}'
+          CIBW_BEFORE_BUILD_WINDOWS: 'pip install setuptools "numpy<2.0.0" meson-python ninja delvewheel'
+          CIBW_BEFORE_BUILD_MACOS: 'pip install setuptools "numpy<2.0.0" meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_macos.sh {project}'
           # Allow pip to find install nightly wheels if necessary
           # Setting PIP_NO_BUILD_ISOLATION=false makes pip use build-isolation.
           CIBW_ENVIRONMENT: "PIP_NO_BUILD_ISOLATION=false PIP_PRE=1 PIP_EXTRA_INDEX_URL=https://pypi.anaconda.org/scientific-python-nightly-wheels/simple"
@@ -152,8 +151,8 @@ jobs:
             DYLD_LIBRARY_PATH=/usr/local/lib delocate-listdeps {wheel} &&
             DYLD_LIBRARY_PATH=/usr/local/lib delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}
 
-          CIBW_TEST_REQUIRES: pytest setuptools
-          CIBW_TEST_COMMAND: "pytest {project}/tests"
+          # CIBW_TEST_REQUIRES: pytest setuptools
+          # CIBW_TEST_COMMAND: "pytest {project}/tests"
 
       - uses: actions/upload-artifact@v4
         with:
