--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
         # should also be able to do multi-archs on a single entry, e.g.
         # [windows-2019, win*, "AMD64 x86"]. However, those two require a different compiler setup
         # so easier to separate out here.
-        #- [ubuntu-22.04, manylinux, x86_64,  ""]
+        - [ubuntu-22.04, manylinux, x86_64,  ""]
         - [macos-13, macosx, x86_64, "10.13"]
-        #- [macos-14, macosx, arm64, "12.0"]
-        #- [windows-2019, win, AMD64, ""]
+        - [macos-14, macosx, arm64, "12.0"]
+        - [windows-2019, win, AMD64, ""]
 
         python: [["cp39", "3.9"], ["cp310", "3.10"], ["cp311", "3.11"], ["cp312", "3.12"]]
         # python[0] is used to specify the python versions made by cibuildwheel
