--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,19 +4,19 @@ requires = [
     "meson-python>=0.17.1",
     "wheel",
     "oldest-supported-numpy",
-    "numpy>=1.25.0,<2.0; python_version>='3.9'",
+    "numpy>=2.0.2; python_version>='3.10'",
 ]
 
 [project]
 name = "taurex_ggchem"
 description = "Taurex Python wrapper for the FORTRAN GGChem code."
 dependencies = [
-    "numpy>=1.25.0,<2.0",
-    "taurex>=3.1.13",
+    "numpy>=2.0.2",
+    "taurex>=3.3.0",
 ]
-version="1.0.7"
+version="1.0.8"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 authors = [
     {name = "Ahmed F. Al-Refaie", email = "ahmed.al-refaie.12@ucl.ac.uk"},
 ]
