--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,9 +25,9 @@ jobs:
         # [windows-2019, win*, "AMD64 x86"]. However, those two require a different compiler setup
         # so easier to separate out here.
         - [ubuntu-22.04, manylinux, x86_64,  ""]
-        - [macos-13, macosx, x86_64, "10.13"]
-        - [macos-14, macosx, arm64, "12.0"]
-        - [windows-2019, win, AMD64, ""]
+        - [macos-13, macosx, x86_64, "10.14"]
+        - [macos-14, macosx, arm64, "12.3"]
+        # - [windows-2019, win, AMD64, ""]
 
         python: [["cp310", "3.10"], ["cp311", "3.11"], ["cp312", "3.12"], ["cp313", "3.13"]]
         # python[0] is used to specify the python versions made by cibuildwheel
@@ -118,7 +118,7 @@ jobs:
           #  numpy2.0 wheels available on PyPI. Also remove/comment out the
           # PIP_NO_BUILD_ISOLATION and PIP_EXTRA_INDEX_URL from CIBW_ENVIRONMENT
           # (also for _MACOS and _WINDOWS below)
-          CIBW_BEFORE_BUILD_LINUX: 'pip install setuptools  numpy meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_linux.sh {project}'
+          CIBW_BEFORE_BUILD_LINUX: 'pip install setuptools numpy meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_linux.sh {project}'
           CIBW_BEFORE_BUILD_WINDOWS: 'pip install setuptools numpy meson-python ninja delvewheel'
           CIBW_BEFORE_BUILD_MACOS: 'pip install setuptools numpy meson-python ninja; bash {project}/build_tools/build_wheels/cibw_before_build_macos.sh {project}'
           # Allow pip to find install nightly wheels if necessary
