--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
         - [ubuntu-22.04, manylinux, x86_64,  ""]
         - [macos-13, macosx, x86_64, "10.14"]
         - [macos-14, macosx, arm64, "12.3"]
-        - [windows-2019, win, AMD64, ""]
+        - [windows-2022, win, AMD64, "", ""]
 
         python: [["cp310", "3.10"], ["cp311", "3.11"], ["cp312", "3.12"], ["cp313", "3.13"]]
         # python[0] is used to specify the python versions made by cibuildwheel
